src/test/run-pass/swap-1.rs
fn main() {
    let mut x = 3; let mut y = 7;
    x <-> y; assert (x == 7); assert (y == 3);
}
