src/test/compile-fail/move-not-variable.rs
fn main() {
    auto x;
    x <- 5;
}
